--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "daisyui": "^5.0.43",
     "cra-template": "1.2.0",
+    "daisyui": "^5.0.43",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.540.0",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-calendar": "^5.1.0",
